--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <title>snakeHTML</title>
+    <meta name="author" content="Ali Shahrivarian">
+    <meta name="description" content="old snake game on browser">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript,game,shahrivarian,browser">
     <link href="css/snakeHTML.css" rel="stylesheet"/>
 </head>
 
