--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>snakeHTML</title>
     <meta name="author" content="Ali Shahrivarian">
     <meta name="description" content="old snake game on browser">
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript,game,shahrivarian,browser">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript,game,shahrivarian,browser,snake,html game,html snake,snake game">
     <link href="css/snakeHTML.css" rel="stylesheet"/>
 </head>
 
